--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.1",
+    "edge-tts-universal": "^1.3.1",
+    "marked": "^16.2.1",
     "tailwindcss": "^4.1.13"
   }
 }
